@@ -21,7 +21,7 @@ mod.on_created_entity = function(event)
     position = entity.position,
     create_build_effect_smoke = false,
   }
-  -- valve_in.teleport(-0.5, 0)
+  if washbox_debug then valve_in.teleport(-0.5, 0) end
 
   local valve_out = entity.surface.create_entity{
     name = mod_prefix .. "valve-out",
@@ -29,7 +29,7 @@ mod.on_created_entity = function(event)
     position = entity.position,
     create_build_effect_smoke = false,
   }
-  -- valve_out.teleport( 0.5, 0)
+  if washbox_debug then valve_out.teleport( 0.5, 0) end
 
   local pumping_speed = entity.surface.create_entity{
     name = mod_prefix .. "pumping-speed",
