@@ -10,9 +10,8 @@ local furnace = {
   name = mod_prefix .. "pumping-speed",
   icon = mod_directory .. "/graphics/icons/washbox.png",
 
-  -- selection_priority = 51,
-  selection_priority = 49,
-  selectable_in_game = false,
+  selection_priority = washbox_debug and 51 or 49,
+  selectable_in_game = washbox_debug,
   selection_box = {{-0.4, -0.4}, {0.4, 0.4}},
   collision_box = {{-0.3, -0.3}, {0.3, 0.3}},
   collision_mask = {layers = {}},
